--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
@@ -33,18 +33,18 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="anggota.html">Members</a></li>
-                <li><a class="dropdown-item" href="#">Taks</a></li>
+                <li><a class="dropdown-item" href="task.html">Taks</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item">Coming soon</a></li>
               </ul>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <!-- <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
             <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
@@ -55,14 +55,14 @@
       <div class="container">
         <div class="row align-items-md-center">
           <div class="col-md-6 d-flex flex-column center-text">
-            <h1 class="font-10vw warna-gelap">
+            <h1 class="font-10vw teks-putih">
               <span class="fw-bold">Welcome</span>
               <span class="fw-light"> to</span>
             </h1>
-            <p class="fw-eemibold mb-n6 ps-md-3 warna-gelap ls-10n4 ls-567 ls-992">axioo class 2022 | smk krian 1</p>
+            <p class="mb-6 ps-md-3 teks-putih ls-p">axioo class 2022 | smk krian 1</p>
           </div>
           <div class="col-md-6 d-flex flex-md-row-reverse">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 569.067 500" style="enable-background: new 0 0 569.067 500" xml:space="preserve">
+            <!-- <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 569.067 500" style="enable-background: new 0 0 569.067 500" xml:space="preserve">
               <g id="OBJECTS">
                 <g>
                   <g>
@@ -1560,7 +1560,7 @@
                   </g>
                 </g>
               </g>
-            </svg>
+            </svg> -->
           </div>
         </div>
       </div>
@@ -1614,7 +1614,27 @@
     </section>
     <!-- memori end -->
 
-    <div></div>
+    <!-- footer -->
+    <footer style="background-color: var(--cadet-gray)" class="mt-5" id="footer">
+      <div class="container teks-putih">
+        <div class="row p-5">
+          <div class="col text-center pt-3">
+            <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 a-footer"></i></a>
+            <a href="#footer"><i class="bi bi-twitter-x p-2"></i></a>
+            <a href="#footer"><i class="bi bi-facebook p-2"></i></a>
+            <p class="pt-3">
+              <a href="#home" class="pe-3 fw-semibold a-footer">Home</a>
+              <a class="pe-3 fw-semibold">Services</a>
+              <a class="pe-3 fw-semibold">About</a>
+              <a class="pe-3 fw-semibold">Terms</a>
+              <a class="fw-semibold">Privacy Policy</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
+
     <button id="toTopBtn" class="btn btn-primary" onclick="scrollToTop()"><i class="bi bi-arrow-up text-putih"></i></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
