--- a/task.html
+++ b/task.html
@@ -6,7 +6,7 @@
     <!-- Tambahkan Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Anggota | axioo class</title>
+    <title>Task | axioo class</title>
     <style>
       /* CSS tambahan untuk menengahkan teks di tengah halaman */
       .centered-text {
@@ -43,8 +43,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Members</a></li>
-                <li><a class="dropdown-item" href="task.html">Taks</a></li>
+                <li><a class="dropdown-item" href="anggota.html">Members</a></li>
+                <li><a class="dropdown-item" href="#">Taks</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
