--- a/index.html
+++ b/index.html
@@ -1595,19 +1595,22 @@
         </div>
         <div class="row">
           <div class="col-md-4 mx-auto pt-4">
-            <img src="img/axse1.png" class="rounded mx-auto d-block" alt="" width="80%" />
+            <img src="./img/foto/jakarta.jpg" class="rounded mx-auto d-block" alt="" width="100%" />
           </div>
           <div class="col-md-4 mx-auto pt-4">
-            <img src="img/axse1.png" class="rounded mx-auto d-block" alt="" width="80%" />
+            <img src="./img/foto/jakarta4.jpg" class="rounded mx-auto d-block" alt="" width="100%" />
           </div>
           <div class="col-md-4 mx-auto pt-4">
-            <img src="img/axse1.png" class="rounded mx-auto d-block" alt="" width="80%" />
+            <img src="./img/foto/jakarta3.jpg" class="rounded mx-auto d-block" alt="" width="100%" />
           </div>
           <div class="col-md-4 mx-auto pt-4">
-            <img src="img/axse1.png" class="rounded mx-auto d-block" alt="" width="80%" />
+            <img src="./img/foto/jakarta2.jpg" class="rounded mx-auto d-block" alt="" width="100%" />
           </div>
-          <div class="col-md-4 mx-auto pt-4">
-            <img src="img/axse1.png" class="rounded mx-auto d-block" alt="" width="80%" />
+          <div class="col-md-4 pt-4">
+            <img src="./img/foto/pahlawan.jpg" class="rounded mx-auto d-block" alt="" width="100%" />
+          </div>
+          <div class="col-md-4 pt-4">
+            <img src="./img/foto/pahlawan2.jpg" class="rounded mx-auto d-block" alt="" width="100%" />
           </div>
         </div>
       </div>
@@ -1617,7 +1620,7 @@
     <!-- footer -->
     <footer style="background-color: var(--cadet-gray)" class="mt-5" id="footer">
       <div class="container teks-putih">
-        <div class="row p-5">
+        <div class="row p-md-5">
           <div class="col text-center pt-3">
             <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 a-footer"></i></a>
             <a href="#footer"><i class="bi bi-twitter-x p-2"></i></a>
