--- a/task.html
+++ b/task.html
@@ -6,6 +6,7 @@
     <!-- Tambahkan Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="img/axse3.png" />
     <title>Task | axioo class</title>
     <style>
       /* CSS tambahan untuk menengahkan teks di tengah halaman */
@@ -31,7 +32,6 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
               <a class="nav-link" href="index.html#about">About Us</a>
             </li>
             <li class="nav-item">
@@ -43,10 +43,10 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="anggota.html">Members</a></li>
+                <li><a class="dropdown-item" href="members.html">Members</a></li>
                 <li><a class="dropdown-item" href="#">Taks</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Coming soon</a></li>
               </ul>
             </li>
           </ul>
