--- a/members.html
+++ b/members.html
@@ -62,8 +62,8 @@
         <div class="container-fluid justify-content-end">
           <a id="backButton" class="text-primary me-2">see all</a>
           <form class="d-flex" id="searchForm">
-            <input class="form-control me-2 fs-6" type="search" placeholder="Search Name" aria-label="Search" id="searchInput" />
-            <button class="btn btn-outline-primary" type="submit">Search</button>
+            <input class="form-control me-2 fs-6 rounded-5" type="search" placeholder="Search Name" aria-label="Search" id="searchInput" />
+            <button class="btn btn-outline-primary rounded-5" type="submit">Search</button>
           </form>
         </div>
       </nav>
