deleted background navbar search

--- a/members.html
+++ b/members.html
@@ -58,7 +58,7 @@
 
     <!-- navbar search -->
     <div class="container">
-      <nav class="navbar shadow z-1 mt-4 rounded-2" style="background-color: var(--antiflash-white)">
+      <nav class="navbar z-1 mt-4 rounded-2" style="background-color: transparent">
         <div class="container-fluid justify-content-end">
           <a id="backButton" class="text-primary me-2">see all</a>
           <form class="d-flex" id="searchForm">
