--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <button id="toTopBtn" class="btn btn-primary" onclick="scrollToTop()"><i class="bi bi-arrow-up text-putih"></i></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <script>
       // Fungsi untuk menampilkan atau menyembunyikan tombol berdasarkan posisi scroll
       window.onscroll = function () {
@@ -159,5 +160,11 @@
         document.body.scrollTop = 0; // Untuk Safari
         document.documentElement.scrollTop = 0; // Untuk Chrome, Firefox, IE, dan Opera
       }
+
+      // Inisialisasi popover
+      var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
+      var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+        return new bootstrap.Popover(popoverTriggerEl);
+      })
     </script>
 </html>
