--- a/task.html
+++ b/task.html
@@ -65,5 +65,13 @@
 
     <!-- Tambahkan Bootstrap JS dan Popper.js (opsional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
+    <script>
+      // Inisialisasi popover
+      var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
+      var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+        return new bootstrap.Popover(popoverTriggerEl);
+      })
+    </script>
   </body>
 </html>
