--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>axse | axioo class</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
     <link rel="icon" href="img/axse3.png" />
+    <style>
+      .link:hover {
+        color: var(--violet-blue);
+      }
+    </style>
   </head>
   <body>
     <!-- navbar -->
@@ -65,17 +71,17 @@
     <!-- home end -->
 
     <!-- about us -->
-    <section id="about">
+    <section id="about" class="hidden">
       <div class="container">
-        <h2 class="text-center mb-5 teks-putih">About Us</h2>
-        <div class="row justify-content-center text-center fs-5 ls-p">
-          <p class="col-md-4 teks-putih me-md-4">
-            Lorem ipsum <span class="fw-bold">dolor</span>, sit amet consectetur adipisicing elit. Fugit laborum perferendis cumque <span class="fw-bold">fuga</span> consequuntur asperiores <span class="fw-bold">eius</span> laboriosam
-            dolor, rerum quo?
+        <h2 class="text-center mb-5 teks-putih display-3 fw-light" data-aos="fade-down" data-aos-duration="1000"><span class="display-1 fw-bold">A</span>bout us</h2>
+        <div class="row justify-content-center text-center ls-p pt-5">
+          <p class="col-md-6 teks-putih" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">
+            Kami, <strong class="fs-5">Axioo Seventh Generation</strong> dari kelas sebelas RPL1, dengan bangga menempuh pendidikan di <a href="https://smkkrian1.sch.id/" target="_blank" class="link fs-5"><strong>SMK Krian 1</strong></a
+            >, spesialisasi Rekayasa Perangkat Lunak. Kami adalah para Anak muda yang bersemangat, berdedikasi untuk menguasai teknologi dan mengembangkan solusi <em>kreatif</em>.
           </p>
-          <p class="col-md-4 teks-putih ms-md-4">
-            Lorem ipsum dolor sit <span class="fw-bold">amet</span>, consectetur adipisicing elit. Et ducimus eius accusamus <span class="fw-bold">ipsum</span> reiciendis dignissimos maxime sequi natus incidunt
-            <span class="fw-bold">nobis</span>.
+          <p class="col-md-6 teks-putih" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
+            Setiap hari, kami tidak hanya mempelajari <span class="fs-4">Code</span> dan algoritma, tetapi juga memupuk <em>kerjasama tim</em> dan <em>keterampilan</em> pemecahan masalah. Kami percaya bahwa melalui pendidikan yang kami
+            terima, kami akan menjadi pemimpin masa depan di dunia <em>teknologi</em>.
           </p>
         </div>
       </div>
@@ -138,6 +144,12 @@
     <button id="toTopBtn" class="btn btn-primary" onclick="scrollToTop()"><i class="bi bi-arrow-up text-putih"></i></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+      });
+    </script>
     <script src="script.js"></script>
     <script>
       // Fungsi untuk menampilkan atau menyembunyikan tombol berdasarkan posisi scroll
@@ -165,6 +177,7 @@
       var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
       var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
         return new bootstrap.Popover(popoverTriggerEl);
-      })
+      });
     </script>
+  </body>
 </html>
