--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     <!-- memori -->
     <section id="memori">
       <div class="container">
-        <div class="row p-5 teks-ungu">
+        <div class="row p-5 teks-gelap">
           <div class="col text-center">
-            <h2 class="fs-1">Memories</h2>
+            <h2 class="display-4 fw-light"><span class="fw-bold display-1">M</span>emories</h2>
           </div>
         </div>
         <div class="row">
@@ -146,13 +146,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      const memoriImage = document.querySelectorAll('.memori-img');
+      const memoriImage = document.querySelectorAll(".memori-img");
 
       memoriImage.forEach((img, i) => {
-        img.dataset.aos = 'fade-down';
+        img.dataset.aos = "fade-down";
         img.dataset.aosDelay = i * 100;
         img.dataset.aosDuration = 1000;
-      })
+      });
 
       AOS.init({
         once: true,
