--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     <!-- memori -->
     <section id="memori">
       <div class="container">
-        <div class="row p-5 teks-gelap">
+        <div class="row p-5">
           <div class="col text-center">
-            <h2 class="display-4 fw-light"><span class="fw-bold display-1">M</span>emories</h2>
+            <h2 class="display-4 fw-light" style="color: var(--vista-blue)"><span class="fw-bold display-1">M</span>emories</h2>
           </div>
         </div>
         <div class="row">
