fade down memories

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row p-5">
           <div class="col text-center">
-            <h2 class="display-4 fw-light" style="color: var(--vista-blue)"><span class="fw-bold display-1">M</span>emories</h2>
+            <h2 class="display-4 fw-light" style="color: var(--vista-blue)" data-aos="fade-down" data-aos-duration="1000"><span class="fw-bold display-1">M</span>emories</h2>
           </div>
         </div>
         <div class="row">
