adjust welcome to

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
     <!-- home -->
     <section id="home" class="shadow-lg">
-      <div class="container">
-        <div class="row align-items-md-center">
+      <div class="container" style="margin-top: -60px">
+        <div class="row d-flex align-items-md-center">
           <div class="col-md-6 d-flex flex-column center-text">
             <h1 class="font-10vw teks-putih">
               <span class="fw-bold welcome"></span>
               <span class="fw-light welcome-to"></span>
             </h1>
-            <p class="mb-6 ps-md-3 teks-putih ls-p p-home"></p>
+            <p class="mb-6 ps-md-3 teks-putih p-home" style="margin-top: -1rem; letter-spacing: 4px"></p>
           </div>
         </div>
       </div>
@@ -121,9 +121,9 @@
     <!-- memori end -->
 
     <!-- footer -->
-    <footer style="background-color: var(--cadet-gray)" class="mt-5" id="footer">
+    <footer style="background-color: var(--vista-blue)" class="mt-5" id="footer">
       <div class="container teks-putih">
-        <div class="row p-md-5">
+        <div class="row p-md-4">
           <div class="col text-center pt-3">
             <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 a-footer"></i></a>
             <a href="#footer"><i class="bi bi-twitter-x p-2"></i></a>
