--- a/members.html
+++ b/members.html
@@ -40,9 +40,7 @@
               <a class="nav-link" href="index.html#memori">Memories</a>
             </li>
             <li class="nav-item">
-              <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="bottom" data-bs-content="Coming Soon">
-                <a class="nav-link disabled">Menfes</a>
-              </span>
+              <a class="nav-link" href="index.html#form">Menfes</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
