--- a/task.html
+++ b/task.html
@@ -44,9 +44,7 @@
               <a class="nav-link" href="index.html#memori">Memories</a>
             </li>
             <li class="nav-item">
-              <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="bottom" data-bs-content="Coming Soon">
-                <a class="nav-link disabled">Menfes</a>
-              </span>
+              <a class="nav-link" href="index.html">Menfes</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
@@ -187,12 +185,6 @@
         for (var i = 0; i < tr.length; i++) {
           tr[i].style.display = "";
         }
-      });
-
-      // Inisialisasi popover
-      var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
-      var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-        return new bootstrap.Popover(popoverTriggerEl);
       });
     </script>
   </body>
