--- a/index.html
+++ b/index.html
@@ -157,20 +157,17 @@
     <!-- form end -->
 
     <!-- footer -->
-    <footer style="background-color: var(--vista-blue)" class="mt-5" id="footer">
-      <div class="container teks-putih">
-        <div class="row p-md-4">
-          <div class="col text-center pt-3">
-            <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 a-footer"></i></a>
-            <a href="#footer"><i class="bi bi-twitter-x p-2"></i></a>
-            <a href="#footer"><i class="bi bi-facebook p-2"></i></a>
-            <p class="pt-3">
-              <a href="#home" class="pe-3 fw-semibold a-footer">Home</a>
-              <a class="pe-3 fw-semibold">Services</a>
-              <a class="pe-3 fw-semibold">About</a>
-              <a class="pe-3 fw-semibold">Terms</a>
-              <a class="fw-semibold">Privacy Policy</a>
-            </p>
+    <footer class="mt-5 mb-4" id="footer">
+      <div class="container warna-gelap">
+        <hr />
+        <div class="row">
+          <div class="col-md">
+            <div class="footer-bottom">Copyright <i class="bi bi-c-circle"></i> 2024 XI RPL 1 | Designed by Tim Web XI 1</div>
+          </div>
+          <div class="col-md text-end">
+            <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 warna-gelap"></i></a>
+            <a href="#footer"><i class="bi bi-twitter-x p-2 warna-gelap"></i></a>
+            <a href="#footer"><i class="bi bi-facebook p-2 warna-gelap"></i></a>
           </div>
         </div>
       </div>
