--- a/task.html
+++ b/task.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="index.html">Menfes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="members.html">Members</a></li>
                 <li><a class="dropdown-item" href="#">Taks</a></li>
