add absensi page

--- a/members.html
+++ b/members.html
@@ -47,8 +47,7 @@
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Members</a></li>
                 <li><a class="dropdown-item" href="task.html">Taks</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Coming soon</a></li>
+                <li><a class="dropdown-item" href="absent.html">Absent</a></li>
               </ul>
             </li>
           </ul>
