--- a/task.html
+++ b/task.html
@@ -51,8 +51,7 @@
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="members.html">Members</a></li>
                 <li><a class="dropdown-item" href="#">Taks</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Coming soon</a></li>
+                <li><a class="dropdown-item" href="absent.html">Absent</a></li>
               </ul>
             </li>
           </ul>
