--- a/absent.html
+++ b/absent.html
@@ -61,14 +61,14 @@
             </div>
             <div class="mb-2">
               <label for="exampleFormControlInput1" class="form-label warna-gelap">Name</label>
-              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Insert Name" name="nama" />
+              <input type="text" class="form-control rounded-5 ps-3" id="exampleFormControlInput1" placeholder="Insert Name" name="nama" />
             </div>
             <div class="mb-2">
               <label for="exampleFormControlInput1" class="form-label warna-gelap">No. Absen</label>
-              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Insert Number" name="absen" />
+              <input type="text" class="form-control rounded-5 ps-3" id="exampleFormControlInput1" placeholder="Insert Number" name="absen" />
             </div>
             <label for="exampleFormControlInput1" class="form-label warna-gelap">Ket</label>
-            <select class="form-select" aria-label="Default select example" name="keterangan">
+            <select class="form-select rounded-5 ps-3" aria-label="Default select example" name="keterangan">
               <option selected>Select option</option>
               <option value="masuk">Masuk</option>
               <option value="izin">Izin</option>
