--- a/absent.html
+++ b/absent.html
@@ -75,8 +75,8 @@
               <option value="sakit">Sakit</option>
               <option value="alpha">Alpha</option>
             </select>
-            <button type="submit" class="btn btn-primary btn-kirim my-4">Submit</button>
-            <button class="btn btn-primary btn-loading d-none my-4" type="button" disabled>
+            <button type="submit" class="btn btn-primary btn-kirim my-4 rounded-5 px-3">Submit</button>
+            <button class="btn btn-primary btn-loading d-none my-4 rounded-5 px-3" type="button" disabled>
               <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
               <span role="status">Loading...</span>
             </button>
