--- a/absent.html
+++ b/absent.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
     <link rel="icon" href="img/axse3.png" />
     <title>Absent | axioo class</title>
+    <style>
+      #footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <!-- navbar -->
