add divider in dropdown

--- a/members.html
+++ b/members.html
@@ -46,6 +46,7 @@
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Members</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="task.html">Taks</a></li>
                 <li><a class="dropdown-item" href="absent.html">Absent</a></li>
               </ul>
