--- a/task.html
+++ b/task.html
@@ -50,6 +50,7 @@
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="members.html">Members</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Taks</a></li>
                 <li><a class="dropdown-item" href="absent.html">Absent</a></li>
               </ul>
