--- a/members.html
+++ b/members.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
     <link rel="icon" href="img/axse3.png" />
-    <title>Anggota | axioo class</title>
+    <title>Members | axioo class</title>
     <style>
       /* CSS tambahan untuk menengahkan teks di tengah halaman */
       .centered-text {
@@ -17,6 +17,11 @@
         justify-content: center;
         height: 150vh; /* Membuat tinggi setara dengan tinggi viewport */
         text-align: center; /* Menengahkan teks secara horizontal */
+      }
+      #footer {
+        padding-top: 2rem;
+        bottom: 0;
+        width: 100%;
       }
     </style>
   </head>
@@ -46,7 +51,7 @@
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Members</a></li>
-                <li><hr class="dropdown-divider"></li>
+                <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="task.html">Taks</a></li>
                 <li><a class="dropdown-item" href="absent.html">Absent</a></li>
               </ul>
@@ -82,20 +87,17 @@
     <!-- content end -->
 
     <!-- footer -->
-    <footer style="background-color: var(--cadet-gray)" class="mt-5" id="footer">
-      <div class="container teks-putih">
-        <div class="row p-md-5">
-          <div class="col text-center pt-3">
-            <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 a-footer"></i></a>
-            <a href="#footer"><i class="bi bi-twitter-x p-2"></i></a>
-            <a href="#footer"><i class="bi bi-facebook p-2"></i></a>
-            <p class="pt-3">
-              <a href="#" class="pe-3 fw-semibold a-footer">Home</a>
-              <a class="pe-3 fw-semibold">Services</a>
-              <a class="pe-3 fw-semibold">About</a>
-              <a class="pe-3 fw-semibold">Terms</a>
-              <a class="fw-semibold">Privacy Policy</a>
-            </p>
+    <footer class="mb-4" id="footer">
+      <div class="container warna-gelap">
+        <hr />
+        <div class="row">
+          <div class="col-md">
+            <div class="footer-bottom">Copyright <i class="bi bi-c-circle"></i> 2024 XI RPL 1 | Designed by Tim Web XI 1</div>
+          </div>
+          <div class="col-md text-end">
+            <a href="https://www.instagram.com/axse.11?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram p-2 warna-gelap"></i></a>
+            <a href="#footer"><i class="bi bi-twitter-x p-2 warna-gelap"></i></a>
+            <a href="#footer"><i class="bi bi-facebook p-2 warna-gelap"></i></a>
           </div>
         </div>
       </div>
